Disable default shared folder for Vagrant VM

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -13,6 +13,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         jenkins.vm.hostname = "jenkins.vm"
 
         # Shared folder for Jenkins VM config
+        jenkins.vm.synced_folder ".", "/vagrant", disabled: true
         jenkins.vm.synced_folder "jenkins-config/", "/jenkins-config"
         
         # VirtualBox configuration
