Disable Jenkins VM GUI

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -22,7 +22,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         # VirtualBox configuration
         jenkins.vm.provider "virtualbox" do |vb|
             vb.name = "jenkins.vm"
-            vb.gui = true
+            vb.gui = false
             vb.memory = 1024
         end
 
