--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 vagrant/.vagrant
+apps/Server/WebApplication/obj
+apps/Server/WebApplication/bin/Debug
+Server.userprefs
+apps/Server/WebApplication.tests/obj
