--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,8 @@
 node {
+    stage("Checkout") {
+        git url: 'https://github.com/matthew-r-richards/continuous-deployment.git'
+    }
     stage("Build Server App") {
-        sh "cd apps/Server; dotnet restore; dotnet build --project WebApplication"
+        sh 'cd apps/Server; dotnet restore; dotnet build --project WebApplication'
     }
 }
