General updates to Jenkins VM configuration, install dotnet core

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ apps/Server/WebApplication/obj
 apps/Server/WebApplication/bin/Debug
 Server.userprefs
 apps/Server/WebApplication.tests/obj
+ubuntu-xenial-16.04-cloudimg-console.log
