--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -7,12 +7,17 @@ VAGRANTFILE_API_VERSION = "2"
 
 # Create boxes
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-    config.vm.box = "box-cutter/ubuntu1404-desktop"
+    config.vm.box = "ubuntu/xenial64"
+
+    # Disable the SSH port enabled by default
+    config.vm.network "forwarded_port", guest: 22, host: 2222, id: "ssh", disabled: true
+    config.ssh.shell = "bash -c 'BASH_ENV=/etc/profile exec bash'"
 
     config.vm.define "jenkins.vm" do |jenkins|
         jenkins.vm.hostname = "jenkins.vm"
 
         # Expose the VM externally
+        jenkins.vm.network "forwarded_port", guest: 22, host: 5022
         jenkins.vm.network "forwarded_port", guest: 8080, host: 1234
 
         # Shared folder for Jenkins VM config
