--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,6 +3,6 @@ node {
         git url: 'https://github.com/matthew-r-richards/continuous-deployment.git'
     }
     stage("Build Server App") {
-        sh 'cd apps/Server; dotnet restore; dotnet build --project WebApplication'
+        sh 'cd apps/Server; dotnet restore; dotnet build **/*.csproj'
     }
 }
