--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ apps/Server/WebApplication/bin/Debug
 Server.userprefs
 apps/Server/WebApplication.tests/obj
 ubuntu-xenial-16.04-cloudimg-console.log
+apps/Server/WebApplication.tests/bin
