--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,6 +6,6 @@ node {
         sh 'cd apps/Server; dotnet restore; dotnet build WebApplication;'
     }
     stage("Unit Test Server App") {
-        sh 'cd apps/Server; dotnet test WebApplication.tests'
+        sh 'cd apps/Server; dotnet test ./WebApplication.tests/WebApplication.tests.csproj'
     }
 }
