First failing test

--- a/apps/Server/WebApplication.tests/WebApplication.tests.csproj
+++ b/apps/Server/WebApplication.tests/WebApplication.tests.csproj
@@ -13,4 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\WebApplication\WebApplication.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
 </Project>
