Add swagger API documentation

--- a/apps/Server/WebApplication/appsettings.json
+++ b/apps/Server/WebApplication/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "AppSettings": {
+	"XmlDocumentationFilename": "WebApplication.xml"
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
