Add pre-publish step to copy XML documentation so that this is published and available for swagger

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Server.userprefs
 apps/Server/WebApplication.tests/obj
 ubuntu-xenial-16.04-cloudimg-console.log
 apps/Server/WebApplication.tests/bin
+apps/Server/publish
+apps/Server/WebApplication/bin
