--- a/apps/Server/WebApplication/WebApplication.csproj
+++ b/apps/Server/WebApplication/WebApplication.csproj
@@ -25,5 +25,11 @@
 	<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="1.1.1" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0-rc3" />
   </ItemGroup>
+  <Target Name="PrepublishScript" BeforeTargets="PrepareForPublish">
+    <ItemGroup>
+      <DocFile Include="bin\*\*\WebApplication.xml" />
+    </ItemGroup>
+    <Copy SourceFiles="@(DocFile)" DestinationFolder="$(PublishDir)" SkipUnchangedFiles="false" />
+  </Target>
 
 </Project>
