Added publish build step for the server app

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,4 +8,7 @@ node {
     stage("Unit Test Server App") {
         sh 'cd apps/Server; dotnet test ./WebApplication.tests/WebApplication.tests.csproj'
     }
+    stage("Publish Server App") {
+        sh 'cd app/Server; dotnet publish WebApplication -c Release -o ../publish'
+    }
 }
