--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -9,16 +9,16 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^1.11.0"
-  },
   "dependencies": {
+    "express": "^4.15.2",
+    "path": "^0.12.7"
+  },
+    "devDependencies": {
+    "nodemon": "^1.11.0",
+    "webpack": "^2.3.3",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "express": "^4.15.2",
-    "path": "^0.12.7",
-    "webpack": "^2.3.3"
+    "babel-preset-react": "^6.23.0"
   }
 }
