--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.prod.config",
-    "dev": "nodemon src/app.js",
-    "start": "node src/app.js"
+    "build": "webpack -p --config webpack.prod.config",
+    "dev": "NODE_ENV=development nodemon src/app.js",
+    "start": "NODE_ENV=production node src/app.js"
   },
   "author": "",
   "license": "ISC",
