Further application build/deployment/dev config + web pack

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ apps/Server/WebApplication.tests/bin
 apps/Server/publish
 apps/Server/WebApplication/bin
 apps/Client/node_modules
+npm-debug.log
+apps/Client/src/dist
