--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "build": "webpack -p --config webpack.prod.config",
-    "dev": "NODE_ENV=development nodemon src/app.js",
-    "start": "NODE_ENV=production node src/app.js"
+    "dev": "nodemon src/app.js",
+    "start": "node src/app.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,12 +17,14 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
+    "nodemon": "^1.11.0",
+    "webpack": "^2.3.3",
+    "webpack-merge": "^4.1.0",
+    "html-webpack-plugin": "^2.28.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
-    "nodemon": "^1.11.0",
-    "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.18.0"
   }
