--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -4,28 +4,36 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "webpack -p --config webpack.prod.config",
+    "build": "rimraf dist && webpack -p --config webpack.prod.config",
     "dev": "nodemon src/app.js",
     "start": "node src/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "express": "^4.15.2",
     "path": "^0.12.7",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0",
-    "webpack": "^2.3.3",
-    "webpack-merge": "^4.1.0",
-    "html-webpack-plugin": "^2.28.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
+    "html-webpack-plugin": "^2.28.0",
+    "nodemon": "^1.11.0",
+    "rimraf": "^2.6.1",
+    "style-loader": "^0.16.1",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.0"
   }
 }
