--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rimraf dist && webpack -p --config webpack.prod.config",
     "dev": "NODE_ENV=development nodemon src/app.js",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "test": "mocha -w test/helpers/browser.js test/**/*.spec.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,11 +25,17 @@
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "babel-register": "^6.24.0",
+    "chai": "^3.5.0",
     "css-loader": "^0.28.0",
+    "enzyme": "^2.8.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "jsdom": "^9.12.0",
+    "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
+    "react-addons-test-utils": "^15.4.2",
     "rimraf": "^2.6.1",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
