--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -37,6 +37,7 @@
     "nodemon": "^1.11.0",
     "react-addons-test-utils": "^15.4.2",
     "rimraf": "^2.6.1",
+    "sinon": "^2.1.0",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.3",
