--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "express": "^4.15.2",
+    "flux": "^3.1.2",
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
