--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^3.3.7",
     "express": "^4.15.2",
     "flux": "^3.1.2",
+    "keymirror": "^0.1.1",
     "path": "^0.12.7",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
