--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -7,7 +7,8 @@
     "build": "rimraf dist && webpack -p --config webpack.prod.config",
     "dev": "NODE_ENV=development nodemon src/app.js",
     "start": "node src/app.js",
-    "test": "mocha -w test/helpers/browser.js test/**/*.spec.js"
+    "test": "mocha-webpack --opts ./mocha-webpack.opts",
+    "test:watch": "npm test -- --watch"
   },
   "author": "",
   "license": "ISC",
@@ -34,8 +35,10 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "inject-loader": "^3.0.0",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
+    "mocha-webpack": "^0.7.0",
     "nodemon": "^1.11.0",
     "react-addons-test-utils": "^15.4.2",
     "rimraf": "^2.6.1",
