--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,13 +2,7 @@ node {
     stage("Checkout") {
         git url: 'https://github.com/matthew-r-richards/continuous-deployment.git'
     }
-    stage("Build Server App") {
-        sh 'cd apps/Server; dotnet restore; dotnet build WebApplication;'
-    }
-    stage("Unit Test Server App") {
-        sh 'cd apps/Server; dotnet test ./WebApplication.tests/WebApplication.tests.csproj'
-    }
-    stage("Publish Server App") {
-        sh 'cd apps/Server; dotnet publish WebApplication -c Release -o ../publish'
+    stage("Build, Test and Publish Server App") {
+        sh 'cd apps/Server; docker-compose -f docker-compose-build.yaml up;'
     }
 }
