--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -7,7 +7,7 @@
     "build": "rimraf dist && webpack -p --config webpack.prod.config",
     "dev": "NODE_ENV=development nodemon src/app.js",
     "start": "node src/app.js",
-    "test": "mocha-webpack --opts ./mocha-webpack.opts",
+    "test": "mocha -u tdd -r ./test/helpers/browser.js --compilers js:babel-core/register ./test/**/*.spec.js",
     "test:watch": "npm test -- --watch"
   },
   "author": "",
@@ -26,6 +26,8 @@
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-resolver": "^1.1.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.24.0",
@@ -35,10 +37,8 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
-    "inject-loader": "^3.0.0",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
-    "mocha-webpack": "^0.7.0",
     "nodemon": "^1.11.0",
     "react-addons-test-utils": "^15.4.2",
     "rimraf": "^2.6.1",
