--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -22,7 +22,8 @@
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
-    "react-router": "^4.0.0"
+    "react-router": "^4.0.0",
+    "superagent": "^3.5.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
