--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "express": "^4.15.2",
     "flux": "^3.1.2",
@@ -23,6 +24,7 @@
     "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "react-router": "^4.0.0",
+    "request": "^2.81.0",
     "superagent": "^3.5.2"
   },
   "devDependencies": {
