--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -7,8 +7,9 @@
     "build": "rimraf dist && webpack -p --config webpack.prod.config",
     "dev": "NODE_ENV=development nodemon src/app.js",
     "start": "node src/app.js",
-    "test": "mocha -u tdd -r ./test/helpers/browser.js --compilers js:babel-core/register ./test/**/*.spec.js",
-    "test:watch": "npm test -- --watch"
+    "test": "mocha",
+    "test:watch": "npm test -- --watch",
+    "coverage": "istanbul cover _mocha"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
+    "babel-istanbul": "^0.12.2",
     "babel-loader": "^6.4.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-resolver": "^1.1.0",
@@ -41,13 +43,16 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "istanbul": "1.0.0-alpha.2",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
+    "nock": "^9.0.13",
     "nodemon": "^1.11.0",
     "react-addons-test-utils": "^15.4.2",
     "rimraf": "^2.6.1",
     "sinon": "^2.1.0",
     "style-loader": "^0.16.1",
+    "supertest": "^3.0.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.1",
