--- a/apps/Server/WebApplication.tests/WebApplication.tests.csproj
+++ b/apps/Server/WebApplication.tests/WebApplication.tests.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
     <PackageReference Include="NSubstitute" Version="2.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
