--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -7,9 +7,9 @@
     "build": "rimraf dist && webpack -p --config webpack.prod.config",
     "dev": "NODE_ENV=development nodemon src/app.js",
     "start": "node src/app.js",
-    "test": "mocha",
+    "test": "NODE_ENV=test mocha",
     "test:watch": "npm test -- --watch",
-    "coverage": "istanbul cover _mocha"
+    "coverage": "NODE_ENV=test istanbul cover _mocha"
   },
   "author": "",
   "license": "ISC",
@@ -26,7 +26,8 @@
     "react-dom": "^15.4.2",
     "react-router": "^4.0.0",
     "request": "^2.81.0",
-    "superagent": "^3.5.2"
+    "superagent": "^3.5.2",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.0",
