--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -19,6 +19,7 @@
     "express": "^4.15.2",
     "flux": "^3.1.2",
     "keymirror": "^0.1.1",
+    "minilog": "^3.1.0",
     "moment": "^2.18.1",
     "path": "^0.12.7",
     "react": "^15.4.2",
