--- a/apps/Client/package.json
+++ b/apps/Client/package.json
@@ -14,10 +14,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-resolver": "^1.1.0",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-register": "^6.24.0",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
+    "css-loader": "^0.28.0",
     "express": "^4.15.2",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "flux": "^3.1.2",
+    "html-webpack-plugin": "^2.28.0",
     "keymirror": "^0.1.1",
     "minilog": "^3.1.0",
     "moment": "^2.18.1",
@@ -27,38 +38,26 @@
     "react-dom": "^15.4.2",
     "react-router": "^4.0.0",
     "request": "^2.81.0",
+    "rimraf": "^2.6.1",
+    "style-loader": "^0.16.1",
     "superagent": "^3.5.2",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.3.3",
+    "webpack-merge": "^4.1.0",
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-istanbul": "^0.12.2",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-resolver": "^1.1.0",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-register": "^6.24.0",
     "chai": "^3.5.0",
-    "css-loader": "^0.28.0",
     "enzyme": "^2.8.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
     "istanbul": "1.0.0-alpha.2",
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
     "nock": "^9.0.13",
     "nodemon": "^1.11.0",
     "react-addons-test-utils": "^15.4.2",
-    "rimraf": "^2.6.1",
     "sinon": "^2.1.0",
-    "style-loader": "^0.16.1",
     "supertest": "^3.0.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.3",
     "webpack-dev-middleware": "^1.10.1",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-hot-middleware": "^2.18.0"
   }
 }
