--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,7 +5,7 @@ node {
     stage("Build, Test and Publish Server App") {
         sh 'cd apps/Server; docker run --rm -v $(pwd):/sln --workdir /sln microsoft/aspnetcore-build sh ./build.sh;'
     }
-    stage("Build and Test and Client App") {
+    stage("Build and Test Client App") {
         sh 'cd apps/Client; docker run --rm -v $(pwd):/src --workdir /src node sh ./build.sh;'
     }
     publishHTML (target: [
