--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,6 +8,10 @@ node {
     stage("Build and Test Client App") {
         sh 'cd apps/Client; docker run --rm -v $(pwd):/src --workdir /src node sh ./build.sh;'
     }
+    stage("Deploy to QA") {
+        sh "sshpass -p vagrant rsync -e 'ssh -o StrictHostKeyChecking=no' puppet/manifests/* vagrant@puppet.vm:/etc/puppetlabs/code/environments/qa/manifests";
+        sh "sshpass -p vagrant rsync -re 'ssh -o StrictHostKeyChecking=no' puppet/modules/* vagrant@puppet.vm:/etc/puppetlabs/code/environments/qa/modules";
+    }
     publishHTML (target: [
         allowMissing: false,
         alwaysLinkToLastBuild: false,
