Run client tests via Dockerfile

--- a/apps/Client/.dockerignore
+++ b/apps/Client/.dockerignore
@@ -2,9 +2,8 @@
 .gitignore
 node_modules
 dist
-test
 coverage
 build.sh
 webpack.dev.config.js
-.istanbul.yml
-.babelrc
+Dockerfile-deploy
+Dockerfile-test
