--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,12 +6,12 @@ node {
         sh 'cd apps/Server; docker run --rm -v $(pwd):/sln --workdir /sln microsoft/aspnetcore-build sh ./build.sh;'
     }
     stage("Build and Test Client App") {
-        sh 'cd apps/Client; docker run --rm -v $(pwd):/src --workdir /src node sh ./build.sh;'
+        sh 'cd apps/Client; ./run_tests.sh;'
     }
     stage("Deploy to QA") {
         sh "sshpass -p vagrant rsync -e 'ssh -o StrictHostKeyChecking=no' puppet/manifests/* vagrant@puppet.vm:/etc/puppetlabs/code/environments/qa/manifests";
         sh "sshpass -p vagrant rsync -re 'ssh -o StrictHostKeyChecking=no' puppet/modules/* vagrant@puppet.vm:/etc/puppetlabs/code/environments/qa/modules";
-        sh "sshpass -p vagrant rsync -re 'ssh -o StrictHostKeyChecking=no' apps/Client vagrant@puppet.vm:/etc/puppetlabs/code/environments/qa/modules/app/files";
+        sh "sshpass -p vagrant rsync --exclude 'coverage' -re 'ssh -o StrictHostKeyChecking=no' apps/Client vagrant@puppet.vm:/etc/puppetlabs/code/environments/qa/modules/app/files";
         // the puppet agent exits with a code of 2 if changes have been applied, we want to convert this to 0 so that Jenkins doesn't think the step failed
         sh "sshpass -p vagrant ssh -o StrictHostKeyChecking=no vagrant@qa.vm sudo /opt/puppetlabs/bin/puppet agent -t || test \$? -eq 2";
     }
