Run server tests via Dockerfile

--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -6,7 +6,7 @@ node {
         git url: 'https://github.com/matthew-r-richards/continuous-deployment.git'
     }
     stage("Build, Test and Publish Server App") {
-        sh 'cd apps/Server; docker run --rm -v $(pwd):/sln --workdir /sln microsoft/aspnetcore-build sh ./build.sh;'
+        sh 'cd apps/Server; ./build.sh;'
     }
     stage("Build and Test Client App") {
         sh 'cd apps/Client; ./run_tests.sh;'
